--- a/index.html
+++ b/index.html
@@ -16,39 +16,46 @@
             overflow: hidden;
             font-family: 'Courier New', monospace;
             color: white;
+            display: flex;
+            flex-direction: column;
         }
 
         #canvas {
             display: block;
             width: 100vw;
-            height: 100vh;
+            height: calc(100vh - 120px);
         }
 
         .controls {
             position: fixed;
-            top: 20px;
-            left: 20px;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border: 1px solid #333;
-            border-radius: 8px;
-            min-width: 250px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.95);
+            padding: 15px 20px;
+            border-top: 2px solid #333;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            gap: 20px;
             z-index: 10;
         }
 
         .control-group {
-            margin-bottom: 20px;
-        }
-
-        .control-group:last-child {
-            margin-bottom: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            flex: 1;
+            min-width: 150px;
         }
 
         label {
             display: block;
-            margin-bottom: 5px;
-            font-size: 14px;
+            margin-bottom: 8px;
+            font-size: 12px;
             color: #aaa;
+            text-align: center;
+            white-space: nowrap;
         }
 
         .value-display {
